# oic-fox-fuckery

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  devenv.nix  devenv.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml  test.yml
config/: development.yaml  production.yaml  test.yaml
src/: app.rs  lib.rs
src/annotated_calendar/: mod.rs
src/common/: settings.rs
src/controllers/: cal.rs
tests/requests/: cal.rs
